# book-review-website

./: .gitignore  .pylintrc  AGENTS.md  README.md  pyproject.toml
config/: settings.py  urls.py
docs/: exercise-1-project-topic.txt  exercise-2-specification.md
openspec/changes/archive/2026-07-17-exercise-5-database-schema/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-17-exercise-5-database-schema/specs/book-review-data-model/: spec.md
openspec/changes/archive/2026-07-22-exercise-6-writing-view-functions/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-22-exercise-6-writing-view-functions/specs/basic-book-views/: spec.md
openspec/changes/archive/2026-07-23-exercise-7-sessions-and-templates/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-23-exercise-7-sessions-and-templates/specs/basic-book-views/: spec.md
openspec/changes/exercise-8-forms-and-user-input/: design.md  proposal.md  tasks.md
openspec/changes/exercise-8-forms-and-user-input/specs/authentication-interface/: spec.md
openspec/changes/exercise-8-forms-and-user-input/specs/basic-book-views/: spec.md
openspec/changes/exercise-8-forms-and-user-input/specs/review-form-workflow/: spec.md
openspec/specs/basic-book-views/: spec.md
openspec/specs/book-review-data-model/: spec.md
openspec/specs/recent-book-session/: spec.md
reviews/: admin.py  models.py  test_views.py  tests.py  urls.py  views.py
reviews/migrations/: 0001_initial.py
reviews/templates/reviews/: base.html  book_detail.html  book_list.html
(+1 files in other folders)
