[project]
name = "book-review-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.15",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "coverage>=7.14.3",
    "pylint>=4.0.6",
    "pylint-django>=2.7.0",
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]